# hyle-cosmos

./: README.md
verifiers/cairo-verifier/src/: utils.rs
verifiers/hyle-contract-circom/: hyleOutput.circom  package.json
verifiers/hyle-contract/src/: lib.rs
verifiers/noir-verifier/: package.json  verifier.ts
verifiers/risc0-verifier/: Cargo.toml
verifiers/risc0-verifier/src/: main.rs
verifiers/snarkjs-verifier/: package.json  verifier.ts
verifiers/snarkjs-verifier/proof-example/: hyleOutput.json  proof.json  public.json  verification_key.json
x/zktx/keeper/: msg_server.go
x/zktx/keeper/snark/: snark.go
