[package]
name = "risc0-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0.5" }
base64 = "0.22.1"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0.111"
hyle_contract = { path = "../hyle-contract" }
hex = "0.4.3"
